--- a/LoginSignup/wwwroot/css/site.css
+++ b/LoginSignup/wwwroot/css/site.css
@@ -12,7 +12,49 @@ html {
   position: relative;
   min-height: 100%;
 }
+.vh-90{
+    height:90vh
+}
+.fw-500 {
+    font-weight: 500
+}
+.custom-color{
+    color: #1bba94;
+}
+.custom-bg{
+    background-color:#1bba94;
+}
+.custom-bg-gray {
+    background-color: #eef0f2;
+}
+main{
+    background-image:url(../images/nts-bg.png)
+}
+/***** Track Styles *****/
+/***** Chrome, Safari, Opera, and Edge Chromium *****/
+input[type="range"]::-webkit-slider-runnable-track {
+    background: #053a5f;
+    height: 0.5rem;
+    border-radius:.5rem;
+}
 
-body {
-  margin-bottom: 60px;
+/******** Firefox ********/
+input[type="range"]::-moz-range-track {
+    background: #053a5f;
+    height: 0.5rem;
+    border-radius:.5rem;
+}
+/***** Thumb Styles *****/
+/***** Chrome, Safari, Opera, and Edge Chromium *****/
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    margin-top: -.2rem; /* Centers thumb on the track */
+    background-color: #5cd5eb;
+    height: 1rem;
+    width: 1rem;
+    border-radius:5rem;
+}
+#sal-value{
+    margin-top:1rem;
 }
