--- a/LoginSignup/Views/Home/Index.cshtml
+++ b/LoginSignup/Views/Home/Index.cshtml
@@ -29,9 +29,9 @@
             </div>
         </div>
     </div>
-    <div class="custom-bg-blue text-white rounded-pill w-100 text-center fw-bold p-2 m-1">
+    <button asp-controller="Home" asp-action="AdminLogin" asp-route-Email="@Model.Email" asp-route-Password="@Model.Password" class="border-0 shadow-none custom-bg-blue text-white rounded-pill w-100 text-center fw-bold p-2 m-1">
         Log In
-    </div>
+    </button>
     <div class="pt-3">
         Didn't have account? <a asp-controller="Home" asp-action="CreateAccount">Sign Up</a>
     </div>
