--- a/LoginSignup/Views/Login/AdminLogin.cshtml
+++ b/LoginSignup/Views/Login/AdminLogin.cshtml
@@ -1,13 +1,9 @@
 ﻿@model LoginSignup.Models.AccountModel
-
 @{
     ViewData["Title"] = "AdminLogin";
 }
-
-<h1>AdminLogin</h1>
-
-<div>
-    <h4>AccountModel</h4>
+<div class="custom-shadow d-flex flex-column align-self-center w-50 w md rounded-3 align-items-center justify-content-center p-2 custom-bg-blue">
+    <h3 class="text-dark">Welcome, @Model.FirstName @Model.LastName</h3>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -29,46 +25,46 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Password)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ConfirmPassword)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ConfirmPassword)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Gender)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Gender)
         </dd>
+       
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Music)
+            Hobbies
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Music)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sports)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sports)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Travel)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Travel)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Movies)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Movies)
+            @{
+                string hob = "";
+                if (Model.Music)
+                {
+                    hob = hob + "Music";
+                }
+                if (Model.Sports)
+                {
+                    if (hob != "")
+                        hob = hob + " , Sports";
+                    else
+                        hob = hob + "Sports";
+                }
+                if (Model.Travel)
+                {
+                    if (hob != "")
+                        hob = hob + " , Travel";
+                    else
+                        hob = hob + "Travel";
+                }
+                if (Model.Movies)
+                {
+                    if (hob != "")
+                        hob = hob + " , Movies";
+                    else
+                        hob = hob + "Movies";
+                }
+                @hob;
+            }
+
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.SourceOfIncome)
@@ -97,5 +93,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Home" asp-action="Index" class="btn btn-danger m-1">Log Out</a>
 </div>
