UI of the all acounts

--- a/LoginSignup/Views/Home/Home.cshtml
+++ b/LoginSignup/Views/Home/Home.cshtml
@@ -93,5 +93,6 @@
     </dl>
 </div>
 <div>
+    <a asp-controller="Home" asp-action="AllAccounts" asp-route-name= "@Model.FirstName @Model.LastName" class="btn btn-primary m-1">All Accounts</a>
     <a asp-controller="Login" asp-action="Logout" class="btn btn-danger m-1">Log Out</a>
 </div>
