--- a/LoginSignup/Views/Shared/_Layout.cshtml
+++ b/LoginSignup/Views/Shared/_Layout.cshtml
@@ -18,4 +18,10 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
 </html>
