--- a/LoginSignup/Views/Home/AllAccounts.cshtml
+++ b/LoginSignup/Views/Home/AllAccounts.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewData["Title"] = "All Accounts";
-   
 }
 <div class="custom-bg-gray custom-shadow py-2 px-4 m-3 vh-90 vw-90 rounded rounded-2 d-flex flex-column">
 <div class="d-flex flex-row justify-content-between align-items-center rounded-3 p-3">
@@ -65,67 +64,65 @@
                 @{
                     foreach (var item in Model)
                     {
-                        
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.FirstName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.LastName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Email)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Gender)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Music)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Sports)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Travel)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Movies)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.SourceOfIncome)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Income)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Age)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Bio)
-                            </td>
-                            <td class="btn-group">
-                                <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#id_@item.Id">
-                                    <i class="bi bi-pencil-square"></i>
-                                </button>
-                                <partial name="_UpdatePartial" model="item" />
-                                <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">
-                                    <i class="bi bi-trash3"></i>
-                                </a>
-                            </td>
-                        </tr>
+                        if (!item.IsDeleted)
+                        {
+                            
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.FirstName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.LastName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Email)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Gender)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Music)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Sports)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Travel)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Movies)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.SourceOfIncome)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Income)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Age)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Bio)
+                                </td>
+                                <td class="btn-group">
+                                    <!-- Button trigger modal -->
+                                    <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#id_@item.Id" onclick="edit(@item.Id)">
+                                        <i class="bi bi-pencil-square"></i>
+                                    </button>
+                                    <partial name="_UpdatePartial" model="item" />
+                                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#del_@item.Id">
+                                        <i class="bi bi-trash3"></i>
+                                    </button>
+                                    <partial name="_DeletePartial" model="item" />
+                                </td>
+                            </tr>
+                        }
+
                     }
                 }
             </tbody>
         </table>
     </div>
 </div>
-@{
-    if (TempData["id"]!= null)
-    {
-        <script>
-            $('#id_@TempData["id"].ToString()').modal('show');
-            $('#id_@TempData["id"].ToString()').modal('toggle');
-        </script>
-    }
-}
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/js/updatePartial.js"></script>
