Added toastr notification partial view for create update delete

--- a/LoginSignup/Views/Shared/_Layout.cshtml
+++ b/LoginSignup/Views/Shared/_Layout.cshtml
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/LoginSignup.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
 </head>
 <body>
     <main role="main" class="d-flex flex-column align-items-center justify-content-center vh-100">
+        <partial name="_NotificationAlert" />
         @RenderBody()
     </main>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
