fixed the session bug i.e. when browser back button after logout it will redirect to login page instead of showing the cached details page.

--- a/LoginSignup/Views/Home/AllAccounts.cshtml
+++ b/LoginSignup/Views/Home/AllAccounts.cshtml
@@ -126,3 +126,7 @@
 </div>
 <script src="~/lib/jquery/dist/jquery.js"></script>
 <script src="~/js/updatePartial.js"></script>
+@{
+    // TempData.Remove("warning");
+    // TempData.Remove("success");
+}
