--- a/LoginSignup/Views/Shared/_NotificationAlert.cshtml
+++ b/LoginSignup/Views/Shared/_NotificationAlert.cshtml
@@ -21,7 +21,6 @@
         };
         toastr.success('@TempData["success"]');
     </script>
-
 }
 @if(TempData["error"]!=null){
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -45,5 +44,29 @@
             "hideMethod": "fadeOut"
         };
         toastr.error('@TempData["error"]');
+    </script>
+}
+@if(TempData["warning"]!=null){
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <script type="text/javascript">
+        toastr.options = {
+            "closeButton": false,
+            "debug": false,
+            "newestOnTop": true,
+            "progressBar": true,
+            "positionClass": "toast-bottom-center",
+            "preventDuplicates": false,
+            "onclick": null,
+            "showDuration": "300",
+            "hideDuration": "1000",
+            "timeOut": "5000",
+            "extendedTimeOut": "1000",
+            "showEasing": "swing",
+            "hideEasing": "linear",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        };
+        toastr.warning('@TempData["warning"]');
     </script>
 }
