Added Image property in account model and tried to upload and retrive file #error_in_uploading

--- a/LoginSignup/Views/Home/Home.cshtml
+++ b/LoginSignup/Views/Home/Home.cshtml
@@ -7,7 +7,7 @@
     <hr />
    
     <div>
-        <a asp-controller="Home" asp-action="MyDetails" class="btn btn-primary m-1">
+        <a asp-controller="Home" asp-action="MyDetails" asp-route-email="@Model.Email" class="btn btn-primary m-1">
             <i class="bi bi-person-circle"></i>
             My Account
         </a>
