--- a/LoginSignup/Views/Home/MyDetails.cshtml
+++ b/LoginSignup/Views/Home/MyDetails.cshtml
@@ -14,6 +14,7 @@
 <div class="custom-shadow d-flex flex-column align-self-center w-50 w md rounded-3 align-items-center justify-content-center p-2 bg-light">
     <h3 class="text-primary p-2 px-4">Welcome, @Model.FirstName @Model.LastName</h3>
     <hr />
+    <img src="@ViewBag.ImageDataUrl" />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
