--- a/LoginSignup/Views/Registration/CreateAccount.cshtml
+++ b/LoginSignup/Views/Registration/CreateAccount.cshtml
@@ -7,7 +7,7 @@
     <div class="fs-2 fw-500 custom-bg-gray">Create Account</div>
     <div class="w-50 w-auto border bg-light rounded-2 p-2">
         <div class="border-4">
-            <form method="post" asp-controller="Registration" asp-action="CreateAccount"
+            <form method="post" enctype="multipart/form-data" asp-controller="Registration" asp-action="CreateAccount"
                   class="w-100 d-flex flex-column gap-1">
                 @* <div asp-validation-summary="All" class="w-100 align-self-start"></div> *@
                 <div class="d-flex gap-3">
@@ -111,7 +111,7 @@
                 <div class="d-flex gap-3">
                     <div class="w-100">
                         <label class="fw-500 custom-color">Upload Profile Picture</label>
-                        <input type="file">
+                        <input type="file" asp-for="Image">
                     </div>
                     <div class="w-100">
                         <div>
