--- a/LoginSignup/wwwroot/css/site.css
+++ b/LoginSignup/wwwroot/css/site.css
@@ -77,3 +77,35 @@ input[type="range"]::-webkit-slider-thumb {
 #sal-value{
     margin-top:1rem;
 }
+#preloader{
+    z-index:3;
+    height : 100vh;
+    width: 100vw;
+    position: absolute;
+    backdrop-filter:blur(3px);
+    display:none;
+}
+#loading-spinner {
+    border: .5rem solid rgba(255, 255, 255, 0.3);
+    border-top: .5rem solid #3498db;
+    border-left: .5rem solid #3498db;
+    border-right: .5rem solid #3498db;
+    border-radius: 50%;
+    width: 5rem;
+    height: 5rem;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+    0% {
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
